--- a/index.html
+++ b/index.html
@@ -27,18 +27,55 @@
     ></script>
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body>
-    <div class="container main">
-      <h1>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, ipsa.
-        Atque soluta voluptates delectus vel quos sunt, nulla consequatur
-        tenetur animi porro nobis dolorum nesciunt maxime doloribus distinctio
-        illum. Perspiciatis, reiciendis ex labore distinctio nobis sapiente,
-        aliquam tempore eos harum vero illo velit nemo, neque magni perferendis
-        fugit sit praesentium?
-      </h1>
+  <body>     
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-6 border border-primary shadow mt-5 p-5">
+          <h1>hgfghg</h1>
+          <h2>hjhgjhgjhg</h2>
+          <h3>jhfjhfjj</h3>
+        </div>
+        <div class="col-md-6">
+          <div class="container mt-3">
+            <h2>Example of Jumbotron</h2>
+            <div class="mt-4 p-5 bg-primary text-white rounded">
+              <h1>Jumbotron Example</h1>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat..
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-6">        
+          <div class="container mt-3">
+          <h2>Example of Jumbotron</h2>
+          <div class="mt-4 p-5 bg-primary text-white rounded">
+            <h1>Jumbotron Example</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat..
+            </p>
+          </div>
 
-    
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="col-md-6 border border-primary shadow">
+            <h1>hgfghg</h1>
+            <h2>hjhgjhgjhg</h2>
+            <h3>jhfjhfjj</h3>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
